Add customization for Gradle `jar` task in case we want to build a .jar instead of .war
Even though the task is disabled, this is still useful information to have